Fix image overflow

--- a/index.css
+++ b/index.css
@@ -145,8 +145,8 @@ html {
 }
 
 .card-image-file {
-  max-width:100%;
-  max-height:100%;
+  max-width: 100%;
+  max-height: inherit;
   margin: auto;
 }
 
